src/components/Toolbar/Toolbar.module.css
.badge {
  border-radius: var(--ns-border-radius-pill);
  padding: 0.1rem 0.35rem;
  display: inline-block;
  text-align: center;
  font-size: var(--ns-font-size-3);
  font-weight: var(--ns-weight-bold);
  color: var(--ns-color-white);
  background-color: var(--ns-color-primary);
  margin-left: var(--ns-space-1);
}

.label {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: var(--ns-space-2);
}

.container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  padding: 0 var(--ns-space-2) var(--ns-space-1) var(--ns-space-2);
  z-index: var(--ns-header-control);
}

.total {
  display: inline-block;
  text-align: center;
  color: var(--ns-color-black);
}

.filter {
  display: flex;
  align-items: center;
}

.leftSide {
  display: flex;
  align-items: center;
}

.rightSide {
  display: flex;
  flex-wrap: wrap;
  gap: var(--ns-space-3);
  align-items: center;
  width: auto;
  justify-content: flex-end;
  margin-bottom: 0;
}

.loading {
  opacity: 0.3;
  justify-content: end !important;
}

.sortMenu {
  min-width: auto;
}

